Spring Boot .增加了 Redis 的配置工具类，实现了部分测试的功能。新增了 Spring Boot 集成 WebMagic（爬虫） 的内容，页面、后台、测试都有。

--- a/src/main/resources/templates/page/admin/adminList.html
+++ b/src/main/resources/templates/page/admin/adminList.html
@@ -19,8 +19,7 @@
     <link rel="stylesheet" href="../css/list.css" media="all"/>
 </head>
 <body class="childrenBody">
-<input type="hidden" id="adminId"
-       value="<shiro:principal property='id'/>" />
+<input type="hidden" id="adminId" value="<shiro:principal property='id'/>" />   <!-- 使用这种方式并不能填充 value 的值为 认证用户的 id 值。 选择隐藏。 -->
 <blockquote class="layui-elem-quote list_search">
     <shiro:hasPermission name="sys:admin:save">
         <div class="layui-inline">
